Modify Patient to hold a list of PatientStatusDetails